--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,14 @@ layout: default
                         {% if author.avatar %}
                         <img class="rounded-circle" src="{{site.baseurl}}/{{author.avatar}}" alt="{{author.name}}" width="70"/>
                         {% endif %}
-						<small class="ml-3"> {{ author.name }} <span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-1">Follow</a></span>
+						<small class="ml-3"> {{ author.name }}
+							<p>
+								<a href="{{ site.authors.terri.twitter }}"><i class="fab fa-twitter"></i></a>&nbsp;
+								<a href="{{ site.authors.terri.facebook }}"><i class="fab fa-facebook"></i></a>&nbsp;
+								<a href="{{ site.authors.terri.instagram }}"><i class="fab fa-instagram"></i></a>&nbsp;
+								<a href="{{ site.authors.terri.linkedin }}"><i class="fab fa-linkedin"></i></a>&nbsp;
+								<a href="mailto:{{ site.authors.terri.email }}"><i class="fas fa-envelope"></i></a>&nbsp;
+							</p>
                             <span class="text-muted d-block mt-1">{{ page.date | date: '%b %d, %Y' }} · {% include meta-read-time.html %}</span>
 						</small>
 					</div>
@@ -114,7 +121,15 @@ layout: default
                         {% endif %} 
 					</div>
 					<div class="col-md-10">		
-                        <h5 class="font-weight-bold">Written by {{ author.name }} {% if author.twitter %}<span><a target="_blank" href="{{ author.twitter }}" class="btn btn-outline-success btn-sm btn-round ml-2">Follow</a></span>{% endif %}</h5>
+                        <h5 class="font-weight-bold">Written by {{ author.name }} 
+							<p>
+								<a href="{{ site.authors.terri.twitter }}"><i class="fab fa-twitter"></i></a>&nbsp;
+								<a href="{{ site.authors.terri.facebook }}"><i class="fab fa-facebook"></i></a>&nbsp;
+								<a href="{{ site.authors.terri.instagram }}"><i class="fab fa-instagram"></i></a>&nbsp;
+								<a href="{{ site.authors.terri.linkedin }}"><i class="fab fa-linkedin"></i></a>&nbsp;
+								<a href="mailto:{{ site.authors.terri.email }}"><i class="fas fa-envelope"></i></a>&nbsp;
+							</p>
+						</h5>
 						{{ author.bio }}					
 					</div>
 				</div>				
