--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,9 +52,19 @@ layout: default
         <!-- Share -->
 		<div class="col-lg-2 pr-4 mb-4 col-md-12">
 			<div class="sticky-top sticky-top-offset text-center">
+				<div class="text-muted-share">
+					Share
+				</div>
 				<div class="share d-inline-block">
 					<!-- AddToAny BEGIN -->
-					{% include share-buttons.html %}
+					<div class="a2a_kit a2a_kit_size_32 a2a_default_style"><ul>
+						<li><a class="a2a_button_twitter"><i class="fab fa-twitter"></i></a></li>
+						<li><a class="a2a_button_facebook"><i class="fab fa-facebook"></i></a></li>
+						<li><a class="a2a_button_linkedin"><i class="fab fa-linkedin"></i></a></li>
+						<li><a class="a2a_button_email"><i class="fas fa-envelope"></i></a></li>
+					</ul>
+						</div>
+						<script async src="https://static.addtoany.com/menu/page.js"></script>
 					<!-- AddToAny END -->
 				</div>
 			</div>
