--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7262,6 +7262,10 @@ a.text-lightblue:hover, a.text-lightblue:focus {
 .text-muted {
   color: #6c757d !important; }
 
+.text-muted-share {
+    color: #6c757d !important;
+    padding-left:38px; }  
+
 .text-black-50 {
   color: rgba(0, 0, 0, 0.5) !important; }
 
