--- a/assets/css/main copy.css
+++ b/assets/css/main copy.css
@@ -18,7 +18,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --light-blue: #d4a0dc;
+  --light-blue: #e8f3ec;
   --primary: #03a87c;
   --secondary: #7832e2;
   --success: #03a87c;
@@ -34,7 +34,7 @@
   --gray: #ced4da;
   --indigo: #502c6c;
   --orange: #fbb500;
-  --lightblue: #d4a0dc;
+  --lightblue: #e8f3ec;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -147,12 +147,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #ac1cac;
+  color: #03a87c;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #5f105f;
+    color: #025d45;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -2082,8 +2082,8 @@ fieldset:disabled a.btn {
 
 .btn-lightblue {
   color: #212529;
-  background-color: #d4a0dc;
-  border-color: #d4a0dc; }
+  background-color: #e8f3ec;
+  border-color: #e8f3ec; }
   .btn-lightblue:hover {
     color: #212529;
     background-color: #cfe6d7;
@@ -2092,8 +2092,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(232, 243, 236, 0.5); }
   .btn-lightblue.disabled, .btn-lightblue:disabled {
     color: #212529;
-    background-color: #d4a0dc;
-    border-color: #d4a0dc; }
+    background-color: #e8f3ec;
+    border-color: #e8f3ec; }
   .btn-lightblue:not(:disabled):not(.disabled):active, .btn-lightblue:not(:disabled):not(.disabled).active,
   .show > .btn-lightblue.dropdown-toggle {
     color: #212529;
@@ -2449,24 +2449,24 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(251, 181, 0, 0.5); }
 
 .btn-outline-lightblue {
-  color: #d4a0dc;
+  color: #e8f3ec;
   background-color: transparent;
   background-image: none;
-  border-color: #d4a0dc; }
+  border-color: #e8f3ec; }
   .btn-outline-lightblue:hover {
     color: #212529;
-    background-color: #d4a0dc;
-    border-color: #d4a0dc; }
+    background-color: #e8f3ec;
+    border-color: #e8f3ec; }
   .btn-outline-lightblue:focus, .btn-outline-lightblue.focus {
     box-shadow: 0 0 0 0.2rem rgba(232, 243, 236, 0.5); }
   .btn-outline-lightblue.disabled, .btn-outline-lightblue:disabled {
-    color: #d4a0dc;
+    color: #e8f3ec;
     background-color: transparent; }
   .btn-outline-lightblue:not(:disabled):not(.disabled):active, .btn-outline-lightblue:not(:disabled):not(.disabled).active,
   .show > .btn-outline-lightblue.dropdown-toggle {
     color: #212529;
-    background-color: #d4a0dc;
-    border-color: #d4a0dc; }
+    background-color: #e8f3ec;
+    border-color: #e8f3ec; }
     .btn-outline-lightblue:not(:disabled):not(.disabled):active:focus, .btn-outline-lightblue:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-lightblue.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(232, 243, 236, 0.5); }
@@ -2476,7 +2476,7 @@ fieldset:disabled a.btn {
   color: #03a87c;
   background-color: transparent; }
   .btn-link:hover {
-    color: #5f105f;
+    color: #025d45;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -3552,7 +3552,7 @@ input[type="button"].btn-block {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid #d4a0dc;
+  border: 1px solid #e8f3ec;
   border-radius: 0.25rem; }
   .card > hr {
     margin-right: 0;
@@ -3588,7 +3588,7 @@ input[type="button"].btn-block {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid #d4a0dc; }
+  border-bottom: 1px solid #e8f3ec; }
   .card-header:first-child {
     border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0; }
   .card-header + .list-group .list-group-item:first-child {
@@ -3597,7 +3597,7 @@ input[type="button"].btn-block {
 .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
-  border-top: 1px solid #d4a0dc; }
+  border-top: 1px solid #e8f3ec; }
   .card-footer:last-child {
     border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px); }
 
@@ -3778,7 +3778,7 @@ input[type="button"].btn-block {
   border: 1px solid #dee2e6; }
   .page-link:hover {
     z-index: 2;
-    color: #5f105f;
+    color: #025d45;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
@@ -3981,7 +3981,7 @@ input[type="button"].btn-block {
 
 .badge-lightblue {
   color: #212529;
-  background-color: #d4a0dc; }
+  background-color: #e8f3ec; }
   .badge-lightblue[href]:hover, .badge-lightblue[href]:focus {
     color: #212529;
     text-decoration: none;
@@ -4159,9 +4159,9 @@ input[type="button"].btn-block {
     color: #c89000; }
 
 .alert-lightblue {
-  color: #d4a0dc;
-  background-color: #d4a0dc;
-  border-color: #d4a0dc; }
+  color: #e8f3ec;
+  background-color: #e8f3ec;
+  border-color: #e8f3ec; }
   .alert-lightblue hr {
     border-top-color: #d7eade; }
   .alert-lightblue .alert-link {
@@ -5137,7 +5137,7 @@ button.bg-orange:focus {
   background-color: #c89000 !important; }
 
 .bg-lightblue {
-  background-color: #d4a0dc !important; }
+  background-color: #e8f3ec !important; }
 
 a.bg-lightblue:hover, a.bg-lightblue:focus,
 button.bg-lightblue:hover,
@@ -5151,19 +5151,19 @@ button.bg-lightblue:focus {
   background-color: transparent !important; }
 
 .border {
-  border: 1px solid #d4a0dc !important; }
+  border: 1px solid #e8f3ec !important; }
 
 .border-top {
-  border-top: 1px solid #d4a0dc !important; }
+  border-top: 1px solid #e8f3ec !important; }
 
 .border-right {
-  border-right: 1px solid #d4a0dc !important; }
+  border-right: 1px solid #e8f3ec !important; }
 
 .border-bottom {
-  border-bottom: 1px solid #d4a0dc !important; }
+  border-bottom: 1px solid #e8f3ec !important; }
 
 .border-left {
-  border-left: 1px solid #d4a0dc !important; }
+  border-left: 1px solid #e8f3ec !important; }
 
 .border-0 {
   border: 0 !important; }
@@ -5226,7 +5226,7 @@ button.bg-lightblue:focus {
   border-color: #fbb500 !important; }
 
 .border-lightblue {
-  border-color: #d4a0dc !important; }
+  border-color: #e8f3ec !important; }
 
 .border-white {
   border-color: #fff !important; }
@@ -7251,7 +7251,7 @@ a.text-orange:hover, a.text-orange:focus {
   color: #c89000 !important; }
 
 .text-lightblue {
-  color: #d4a0dc !important; }
+  color: #e8f3ec !important; }
 
 a.text-lightblue:hover, a.text-lightblue:focus {
   color: #c6e2d0 !important; }
